Add -lnuma with DPDK

--- a/configure.ac
+++ b/configure.ac
@@ -240,7 +240,7 @@ AC_ARG_ENABLE(dpdk-module,
 if test "$enable_dpdk_module" = yes; then
     AC_CHECK_HEADER([rte_config.h], [], [enable_dpdk_module=no])
     if test "$enable_dpdk_module" = yes; then
-        STATIC_LIBS="${STATIC_LIBS} -lsfbpf ${DPDK_LDFLAGS} -ldpdk -lpthread"
+        STATIC_LIBS="${STATIC_LIBS} -lsfbpf ${DPDK_LDFLAGS} -ldpdk -lpthread -lnuma"
         CFLAGS="${CFLAGS} -std=gnu99 -Wno-pedantic"
     fi
 fi
